<resources>
    <string name="app_name">Gualmarsh</string>
    <string name="title_activity_home_login" translatable="false">HomeLoginActivity</string>
    <string name="title_activity_principal" translatable="false">PrincipalActivity</string>
    <string name="title_activity_log_in" translatable="false">LoginActivity</string>
    <string name="home_fragment_label" translatable="false">Home Fragment</string>
    <string name="login_fragment_label" translatable="false">Login Fragment</string>
    <string name="register_fragment_label" translatable="false">Register Fragment</string>
    <string name="item_fragment_label" translatable="false">Item Fragment</string>
    <string name="product_fragment_label" translatable="false">Product Fragment</string>
    <string name="search_fragment_label" translatable="false">Search Fragment</string>
    <string name="settings_fragment_label" translatable="false">Settings Fragment</string>
    <string name="web_fragment_label" translatable="false">Web Fragment</string>

    <!--Login & Register-->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_in_upperCase">LOG IN</string>
    <string name="register_upperCase">REGISTER</string>
    <string name="name_hint">Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_new_account"><u>Register a new account</u></string>
    <string name="already_have_account"><u>Already have an account</u></string>

    <!--Bottom Navigation Bar-->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_items">Items</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>

    <!--Dashboard-->
    <string name="dashboard_summary">SUMMARY</string>
    <string name="dashboard_main">Dashboard</string>
    <string name="dashboard_recent_items">RECENT ITEMS</string>
    <string name="dashboard_items">Items</string>
    <string name="dashboard_categories">Categories</string>
    <string name="dashboard_quantity">Total quantity</string>
    <string name="dashboard_total">Total value</string>
    <!--Settings-->
    <string name="settings_main">Settings</string>
    <string name="settings_Log_Out">Log Out</string>
    <string name="settings_Web">About us</string>
    <string name="settings_Phone">Contact Support</string>
    <string name="settings_Email">Call us</string>
    <string name="settings_settings">Settings</string>

    <!--Items-->
    <string name="inventory_main">Inventory</string>
    <string name="inventory_products_main">Products</string>
    <string name="inventory_lastUpdated">Last Updated</string>

    <!--Add Item-->
    <string name="addItem_btnSave">SAVE</string>
    <string name="addItem_enterItemName">Enter Item Name</string>
    <string name="addItem_Quantity">Quantity</string>
    <string name="addItem_Barcode">Barcode</string>
    <string name="addItem_Price">Price</string>
    <string name="addItem_Unit">|  unit(s)</string>
    <string name="addItem_expirationDate">Expiration Date</string>
    <string name="addItem_Description">Description</string>

    <!--Show Item-->
    <string name="showItem_btnSave">SAVE</string>
    <string name="showItem_enterItemName">Enter Item Name</string>
    <string name="showItem_Quantity">Quantity</string>
    <string name="showItem_Barcode">Barcode</string>
    <string name="showItem_Price">Price</string>
    <string name="showItem_Unit">|  unit(s)</string>
    <string name="showItem_expirationDate">Expiration Date</string>
    <string name="showItem_Description">Description</string>
    <string name="showItem_TotalPrice">Total Price</string>
    <string name="showItem_LastUpdated">Last Updated</string>
    <string name="showItem_iconDelete">Delete</string>
    <string name="showItem_iconMove">Move</string>
    <string name="showItem_iconExport">Export</string>

    <!--Pop up-->
    <string name="discardPopUp_Title">Discard changes?</string>
    <string name="discardPopUp_Text">Are you sure you want to discard your changes?</string>
    <string name="discardPopup_Cancel">Cancel</string>
    <string name="discardPopup_Discard">Discard</string>


    <!--Validations-->
    <string name="emptyField">Field cannot be empty</string>
    <string name="incorrect_username">The username you entered is incorrect, please try again</string>
    <string name="invalid_password">Password should contain at least 1 digit, 1 upper case, 1 lower case, and 1 special character</string>
    <string name="invalid_password_length">Password should have 6 character minimum</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="incorrect_email">The email format is incorrect</string>

    <!-- Toast Strings -->
    <string name="signed_out">Signed out</string>
    <string name="registration_failed">Registration failed, please try again</string>


    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>