<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_home_login">

    <fragment
        android:id="@+id/fragment_home_login"
        android:name="com.sc703.gualmarsh.login.HomeLoginFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home_login">

        <action
            android:id="@+id/action_Home_to_Login"
            app:destination="@id/fragment_login" />
        <action
            android:id="@+id/action_Home_to_Register"
            app:destination="@id/fragment_register" />
    </fragment>
    <fragment
        android:id="@+id/fragment_login"
        android:name="com.sc703.gualmarsh.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_Login_to_Register"
            app:destination="@id/fragment_register" />
    </fragment>
    <fragment
        android:id="@+id/fragment_register"
        android:name="com.sc703.gualmarsh.login.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_Register_to_Login"
            app:destination="@id/fragment_login" />
    </fragment>
</navigation>